crates/schema/tests/compile_fail/derive_schema_unknown_schema_option.rs
use nebula_schema::Schema;

#[derive(Schema)]
#[schema(unknown_option = "nope")]
struct Bad {
    x: String,
}

fn main() {}
